@@ -64,5 +64,26 @@
             <field name="model">account.invoice,-1</field>
             <field name="action" ref="act_filter_commission"/>
         </record>
+        <!-- ################################### -->
+        <!-- ######## Received premiums ######## -->
+        <!-- ################################### -->
+        <record model="ir.action.act_window" id="act_received_premiums_relate">
+            <field name="name">Received Premiums</field>
+            <field name="res_model">account.move.line</field>
+            <field name="domain"
+                eval="[('principal_invoice_line.invoice', 'in', Eval('active_ids'))]"
+                pyson="1"/>
+        </record>
+        <record model="ir.action.act_window.view"
+            id="act_received_premiums_relate_view">
+            <field name="sequence" eval="10"/>
+            <field name="view" ref="contract_insurance_invoice.move_line_view_list"/>
+            <field name="act_window" ref="act_received_premiums_relate"/>
+        </record>
+        <record model="ir.action.keyword" id="act_received_premiums_relate_keyword">
+            <field name="keyword">form_relate</field>
+            <field name="model">account.invoice,-1</field>
+            <field name="action" ref="act_received_premiums_relate"/>
+        </record>
     </data>
 </tryton>
